syntax = "proto3";

message _MarketCollectionAction {
  optional string text             = 1;
  optional string localization_key = 2;
  optional string url              = 3;
}
