syntax = "proto3";

message _MarketCollectionBanner {
  optional string small = 1;
  optional string big = 2;
}
