syntax = "proto3";

message _MarketCollectionTitle {
  optional string text = 1;
  optional string localizationKey = 2;
}
